--- a/index.html
+++ b/index.html
@@ -3,130 +3,23 @@
 
 <head>
     <link rel="stylesheet" href="recipe-styles.css">
-    <title>let's eat</title>
+    <title>let's eat - appendix</title>
 </head>
 <body>
     <div class="book">
-        <div class="ongoing page page-left one">
-            <div class="media">
-                <img src="media/bulgogi.jpg" alt="plate of korean beef and rice">
-            </div>
-            <div class="notes">
-                <p>Notes:</p>
-                <p>SO SO BOMB</p>
-            </div>
-        </div>
-        <div class="ongoing page page-right two">
-            <div class="title"><p>Korean Beef Power Bowls:</p></div>
-            <div class="info">yield: 4 servings ~ prep: 30 mins ~ cook: 15 mins ~ total: 45 mins</div>
-            <div clas="ingredients">
-                <p>ingredients</p>
-                <p>
-                    for beef:
-                    <ul>
-                        <li>1/4 cup brown sugar, packed</li>
-                        <li>1/4 cup reduced sodium soy sauce</li>
-                        <li>1 tablespoon freshly grated ginger</li>
-                        <li>2 tablespoons sesame oil</li>
-                        <li>1/2 teaspoon sriracha, or more to taste</li>
-                        <li>1 tablespoon olive oil</li>
-                        <li>2 cloves garlic, minced</li>
-                        <li>1 pound grounf beef</li>
-                    </ul>
-                </p>
-                <p>instructions</p>
-                <p>
-                    <ol>
-                        <li>in a small bowl, whisk together brown sugar, soy sauce, ginger, sesame oil, and sriracha</li>
-                        <li>heat olive oil in a large skillet over medium high head</li>
-                        <li>add garlic and cook, stirring constantly, unitl fragrant, about 1 minute</li>
-                        <li>add ground beef and cook until browned, about 3-5 minutes, making sure to cumble the beef as it cooks; drain excess fat</li>
-                        <li>stir in soy sauce mixture until well combined, allowing to simmer until heated through, about 2 minutes</li>
-                    </ol>
-                </p>
+        <div class="page page-left">
+            <div class="appendix">
+                <div class="title"><p>appendix:</p></div>
+                <ul>
+                    <li><a href="corn-bread.html">corn bread</a></li>
+                    <li><a href="korean-beef.html">korean beef</a></li>
+                    <li><a href="puff-puff.html">puff puff</a></li>
+                </ul>
             </div>
         </div>
-
-
-        <div class="ongoing page page-left three">
-            <div class="media">
-                <img src="media/puff-puff.jpeg" alt="bowl of puff puff">
-            </div>
-            <div class="notes">
-                <p>Notes:</p>
-                <p>a typical Nigerian snack</p>
-            </div>
-        </div>
-        <div class="ongoing page page-right four">
-            <div class="title"><p>Puff-Puff:</p></div>
-            <div class="info"></div>
-            <div clas="ingredients">
-                <p>ingredients</p>
-                <p>
-                    <ul>
-                        <li>5 cups all-purpose flour</li>
-                        <li>4 small packets yeast</li>
-                        <li>1 cup sugar</li>
-                        <li>2 1/4 cups warm water</li>
-                        <li>1/2 teaspoon salt</li>
-                        <li>vegetable oil</li>
-                    </ul>
-                </p>
-                <p>instructions</p>
-                <p>
-                    <ol>
-                        <li>in a small bowl, mix all ingredients apart from the vegetable oil</li>
-                        <li>allow to sit until flour rises</li>
-                        <li>pour enough vegetbale oil to deep fry the dough mixture into a pot on medium heat</li>
-                        <li>fry mixture small, smalls balls (like size of a tennis ball)</li>
-                    </ol>
-                </p>
-            </div>
-        </div>
-
-
-        <div class="ongoing page page-left five">
-            <div class="media">
-                <img src="media/cornbread.jpeg" alt="plate of cornbread">
-            </div>
-            <div class="notes">
-                <p>Notes:</p>
-                <p>SO SO BOMB</p>
-            </div>
-        </div>
-        <div class="ongoing page page-right six">
-            <div class="title"><p>Corn - Spoon Bread:</p></div>
-            <div class="info"></div>
-            <div clas="ingredients">
-                <p>ingredients</p>
-                <p>
-                    <ul>
-                        <li>2 eggs</li>
-                        <li>1 stick of butter</li>
-                        <li>8 ozs of sour cream</li>
-                        <li>2 tablespoonful of sugar</li>
-                        <li>1 8.5 oz box of jiffy corn muffin mix or martha white corn muffin mix</li>
-                    </ul>
-                </p>
-                <p>instructions</p>
-                <p>
-                    <ol>
-                        <li>beat eggs lightly</li>
-                        <li>melt butter</li>
-                        <li>mix all ingredients together lightly by hand apart from the corn muffin mix</li>
-                        <li>lightly mix in box of corn muffin mix</li>
-                        <li>bake in a greased deep dish or cupcake pan for about 1 hour in a 300-350 degree oven unitl the tooth pick comes out clean</li>
-                    </ol>
-                </p>
-            </div>
+        <div class="page page-right">
+            <div class="appendix"></div>
         </div>
     </div>
-    <div class="controls">
-        <button class="back">&lt</button>
-        <button class="next">&gt</button>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="recipe-scprit.js"></script>
 </body>
 </html> 
